<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FtcWifiChannelSelectorActivity" >

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/buttonConfigure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner1"
        android:text="@string/configure_settings" />

    <Button
        android:id="@+id/buttonWifiSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonConfigure"
        android:layout_marginTop="50dp"
        android:text="@string/launch_wifi_settings" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/channel_change_explanation"
        android:id="@+id/channelExplanationView"
        android:padding="10dp"
        android:layout_below="@+id/buttonWifiSettings"/>

</RelativeLayout>