<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:keepScreenOn="true"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".FtcDriverStationActivity">

  <TextView
    android:id="@+id/textWifiDirectStatus"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text=""/>

  <TextView
    android:id="@+id/textPingStatus"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/textWifiDirectStatus"
    android:text=""/>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/batteryStatusLayout"
        android:layout_below="@+id/textPingStatus"
        android:layout_marginStart="8dp">

        <TextView
            android:id="@+id/textRobotBatteryLabel"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="start|center_vertical"
            android:text="@string/label_robot_battery"/>

        <TextView
            android:id="@+id/textRobotBatteryVoltage"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="5dp"
            android:ellipsize="end"
            android:gravity="start|center_vertical"
            android:maxLines="1"
            android:layout_toEndOf="@+id/textRobotBatteryLabel"
            android:text="@string/label_unknown_robot_battery"/>

        <TextView
            android:id="@+id/textRCBatteryLabel"
            android:layout_height="32dp"
            android:layout_width="wrap_content"
            android:gravity="end|center_vertical"
            android:text="@string/label_rc_battery"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/textRCBatteryPercent"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:id="@+id/textRCBatteryPercent"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:ellipsize="end"
            android:gravity="end|center_vertical"
            android:maxLines="1"
            android:text="@string/label_unknown_RC_battery"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"/>


    </RelativeLayout>


  <TextView
    android:id="@+id/textOpModeLabel"
    android:layout_width="120dp"
    android:layout_height="32dp"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/batteryStatusLayout"
    android:gravity="end|center_vertical"
    android:text="@string/label_current_op_mode"/>

  <TextView
    android:id="@+id/textOpModeName"
    android:layout_width="wrap_content"
    android:layout_height="32dp"
    android:layout_marginStart="8dp"
    android:ellipsize="end"
    android:gravity="start|center_vertical"
    android:maxLines="1"
    android:text="Stop Robot"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:layout_below="@+id/batteryStatusLayout"
    android:layout_toEndOf="@+id/textOpModeLabel"/>

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/textOpModeLabel"
    android:orientation="vertical"
    android:id="@+id/linearLayout">

    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/textOpModeLabel"
      android:orientation="horizontal">

      <Button
        android:id="@+id/buttonSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:enabled="false"
        android:onClick="onClickButtonSelect"
        android:text="@string/label_select"/>

      <Button
        android:id="@+id/buttonStop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:enabled="false"
        android:onClick="onClickButtonStop"
        android:text="@string/label_stop"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Init"
            android:id="@+id/buttonInit"
            android:enabled="false"
            android:layout_weight="1"
            android:onClick="onClickButtonInit"/>


    </LinearLayout>

    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/textOpModeLabel"
      android:orientation="horizontal">

      <Button
        android:id="@+id/buttonStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:enabled="false"
        android:onClick="onClickButtonStart"
        android:text="@string/label_start"/>

      <Button
        android:id="@+id/buttonStartTimed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:enabled="false"
        android:onClick="onClickButtonStartTimed"
        android:text="@string/label_start_timed"/>

    </LinearLayout>

  </LinearLayout>

    <RelativeLayout
    android:id="@+id/bottom_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_below="@+id/linearLayout"
    android:layout_alignParentStart="true"
    android:layout_alignParentBottom="true">
    <TextView
      android:id="@+id/textTelemetry"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"/>
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom"
      android:orientation="horizontal"
      android:layout_alignParentBottom="true"
      android:layout_alignParentStart="true">
      <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
          android:id="@+id/user1_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:padding="5dp"
          android:textStyle="bold"
          android:textAppearance="?android:attr/textAppearanceMedium"
          android:text="User 1"/>

        <TextView
          android:id="@+id/user1"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginTop="8dp"
          android:paddingBottom="5dp"
          android:textStyle="bold"
          android:textSize="16sp"
          android:text="@string/join_player_1"
          android:textColor="#22f"
          android:lines="4"
          android:textAlignment="center"/>
      </LinearLayout>

      <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
          <TextView
            android:id="@+id/user2_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="5dp"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="User 2"/>

          <TextView
            android:id="@+id/user2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingBottom="5dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/join_player_2"
            android:textColor="#f33"
            android:lines="4"
            android:textAlignment="center"/>
        </LinearLayout>

    </LinearLayout>


    </RelativeLayout>



</RelativeLayout>