<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent" android:keepScreenOn="true" android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@+id/textWifiDirectInstructions"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/pair_instructions" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@+id/textWifiDirectDevices" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/wifi_direct_devices" android:layout_below="@id/textWifiDirectInstructions" android:layout_alignLeft="@id/textWifiDirectInstructions" />

    <ScrollView android:id="@+id/scrollView1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="10">
        <LinearLayout android:orientation="vertical"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content">
            <RadioGroup android:id="@+id/radioGroupDevices" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_back"
        android:id="@+id/buttonBack"
        android:onClick="onClickButtonBack"/>
</LinearLayout>